# backend/docs/swagger.json
@@ -9,7 +9,41 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/chat": {
+        "/chat/{id}": {
+            "get": {
+                "description": "handler to fetch all past messages between the user and the bot",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Get messages",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Difficulty Level",
+                        "name": "level",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "post": {
                 "description": "Get a response to a question",
                 "consumes": [
@@ -29,29 +63,14 @@
                         "name": "message",
                         "in": "query",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/messages/{id}": {
-            "get": {
-                "description": "handler to fetch all past messages between the user and the bot",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "chat"
-                ],
-                "summary": "Get messages",
-                "parameters": [
+                    },
+                    {
+                        "type": "string",
+                        "description": "Difficulty Level",
+                        "name": "level",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Account ID",
