# backend/internal/api/handler.go
@@ -21,13 +21,17 @@ func HealthCheck(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param message query string true "Message"
+// @Param level query string true "Difficulty Level"
+// @Param id path int true "Account ID"
 // @Success 200
-// @Router /chat [post]
+// @Router /chat/{id} [post]
 func BotResponse(c *gin.Context) {
 
 	query := c.Query("message")
+	level := c.Query("level")
+	id := c.Param("id")
 
-	outgoingMessage, err := service.ProcessIncomingMsg(query)
+	outgoingMessage, err := service.ProcessIncomingMsg(query, level, id)
 	if err != nil {
 		log.Printf("Error processing message %v ", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"detail": "Internal Server Error"})
@@ -36,19 +40,22 @@ func BotResponse(c *gin.Context) {
 	c.JSON(http.StatusOK, outgoingMessage)
 }
 
-// for future reference
 // GetMessages godoc
 // @Summary Get messages
 // @Description handler to fetch all past messages between the user and the bot
 // @Tags chat
 // @Accept  json
 // @Produce  json
+// @Param level query string true "Difficulty Level"
 // @Param        id   path      int  true  "Account ID"
 // @Success 200
-// @Router /messages/{id} [get]
+// @Router /chat/{id} [get]
 func GetMessages(c *gin.Context) {
+
+	level := c.Query("level")
 	id := c.Param("id")
 	c.JSON(http.StatusOK, gin.H{
-		"id": id,
+		"id":    id,
+		"level": level,
 	})
 }
